--- a/pages/about.html
+++ b/pages/about.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <header>
-        <a href="../index.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="#">О нас</a>
-        <a href="contacts.html">Контакты</a>
+        <a href="../pages/contacts.html">Контакты</a>
     </header>
     <main>
         <!--Виды пирожных-->
@@ -38,7 +38,7 @@
             Кстати, название десерт получил уже после смерти создателя: <i>«эклер»</i> в переводе с французского означает «молния» или «вспышка».
             Не очень понятно, причём тут природное явление – словарь объясняет это тем, что вкусное пирожное съедается с быстротой молнии.</p>
 
-            <img src="/images/eklery.jpg" alt="Эклеры" title="Эклеры" width="300" height="200">
+            <img src="../images/eklery.jpg" alt="Эклеры" title="Эклеры" width="300" height="200">
 
         <!--О корзиночках-->
 
@@ -50,7 +50,7 @@
            Предположительно рецепт был позаимствован из венгерской кухни, и слегка модернизированные «корзиночки» стали кондитерским символом СССР.
            Новые времена принесли на столы более изысканные лакомства, но вкус <i>тех</i> «корзиночек» не подлежит обсуждению как один из столпов детства.</p>
 
-           <img src="/images/korzinochka.jpg" alt="Корзиночка" title="Корзиночка" width="300" height="200">
+           <img src="../images/korzinochka.jpg" alt="Корзиночка" title="Корзиночка" width="300" height="200">
 
         <!--О картошке-->
         
@@ -65,7 +65,7 @@
            А известное нам название появилось уже в советские времена – неоднородность пирожного маскировали щедрой порцией какао-порошка, из-за чего пирожное напоминало клубень.
            Можно купить готовую «картошку» в магазине, но самые аппетитные лакомства получаются, если сделать их своими руками.</p>
 
-           <img src="/site/images/kartoshka.jpg" alt="Картошка" title="Картошка" width="300" height="200">
+           <img src="../images/kartoshka.jpg" alt="Картошка" title="Картошка" width="300" height="200">
 
     </main>
     <footer>
