--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,8 @@
 <body>
     <header>
         <a href="#">Главная</a>
-        <a href="/pages/about.html">О нас</a>
-        <a href="/pages/contacts.html">Контакты</a>
+        <a href="../pages/about.html">О нас</a>
+        <a href="../pages/contacts.html">Контакты</a>
     </header>
     <main>
 
@@ -50,8 +50,8 @@
                 <li>Макарони.</li>
             </ul>
         
-        <p>Хотите узнать о них подробнее? Раздел <a href="/pages/about.html" title="О нас">&#171;О нас&#187;</a> ждет!</p>
-        <img src="/images/main.jpg" alt="Пирожные" title="Вкуснейшие пирожные">
+        <p>Хотите узнать о них подробнее? Раздел <a href="../pages/about.html" title="О нас">&#171;О нас&#187;</a> ждет!</p>
+        <img src="../images/main.jpg" alt="Пирожные" title="Вкуснейшие пирожные">
     </main>
     <footer>
         <span>&copy;&nbsp;E. Kuznetsova</span>
