--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <header>
-        <a href="../index.html">Главная</a>
-        <a href="about.html">О нас</a>
+        <a href="../pages/index.html">Главная</a>
+        <a href="../pages/about.html">О нас</a>
         <a href="#">Контакты</a>
     </header>
 
